--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <td>
         <h1>Ivan Nogolica</h1>
         <p><em>Djelatnik u Bebabitu i <strong><a href="https://www.youtube.com/channel/UCv3Ob6T4cg4Okj0iGTdeIbg">Podcaster</a></strong></em></p>
-        <p>Zovem se Ivan. Imam 31. godinu. Djelatnik sam Bebabita, programiramo aplikacije za strane klijente. interesi su mi čitanje, trening, rad na sebi itd</p>
+        <p>Zovem se Ivan. Dolazim iz Dubrovnika. 31 godina. Radim kao senior programer u Bebabit-u. interesi su mi čitanje, trening, rad na sebi itd</p>
       </td>
     </tr>
   </table>
@@ -42,7 +42,7 @@
     <tbody>
       <tr>
         <td>2012-2013 </td>
-        <td>Centar za gospodarenje otpadom</td>
+        <td>CGO</td>
       </tr>
       <tr>
         <td>2017-2018</td>
